--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-align: center;
+  width: 100%;
+}
+
+.card {
   color: white;
+  background-color:blue;
+  border: 15px solid blue;
+  border-radius: 20px;
+  width: 250px;
+  height: fit-content;
+  margin: 20px 5px;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 15px ;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card h2 {
+  font-size: 1.2rem;
+  color:white;
+}
+
+.card h3 {
+  margin: 10px;
+  font-size: .9rem;
+}
+
+.card p {
+  margin: 10px;
+  text-align: justify;
+  font-size: .8rem;
+}
+
+.u {
+  transform: scaleX(-1);
 }
