--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,16 @@
 
 .card h3 {
   margin: 10px;
+  text-align: justify;
+  text-transform: uppercase;
   font-size: .9rem;
+}
+
+.card h6 {
+  margin: 5px;
+  text-align: justify;
+  text-transform: uppercase;
+  font-size: .7rem;
 }
 
 .card p {
@@ -42,5 +51,9 @@
 }
 
 .u {
-  transform: scaleX(-1);
+  transform: scale(-1, 1);
+  -moz-transform: scale(-1, 1);
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
 }
