--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  color: blue;
+}
+
+.header {
+  height: 70px;
+  font-size: 30px;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .list {
   display: flex;
   flex-direction: row;
@@ -56,4 +76,13 @@
   -webkit-transform: scale(-1, 1);
   -o-transform: scale(-1, 1);
   -ms-transform: scale(-1, 1);
+}
+
+.filter {
+  margin: 10px;
+  display: inline;
+}
+
+select {
+  margin: 5px;
 }
