--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
 
 .App {
   display: flex;
@@ -14,9 +13,10 @@ body {
 }
 
 .header {
-  height: 70px;
+  height: fit-content;
   font-size: 48px;
   font-weight: bolder;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,6 +52,7 @@ body {
   height: auto;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+  border-bottom: 5px solid transparent;
   overflow: hidden;
 }
 
@@ -59,47 +60,50 @@ body {
   background: rgb(0, 0, 255);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
-  padding: 10px 0;
+  padding: 10px;
 }
 
 .card h2 {
-  margin: 0 10px 10px 10px;
+  /* margin: 0 0 10px 0; */
   font-size: 1.2rem;
   font-weight: bolder;
   letter-spacing: .1rem;
   text-transform: uppercase;
-  background: -webkit-linear-gradient(135deg, hotpink, aquamarine,  mediumpurple);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 .card h3 {
-  margin: 10px;
+  margin: 10px 0;
   text-align: justify;
   text-transform: uppercase;
   font-size: .9rem;
 }
 
 .card h6 {
-  margin: 5px;
+  margin: 5px 0;
   text-align: justify;
   text-transform: uppercase;
   font-size: .7rem;
+  font-weight: 550;
 }
 
 .card p {
-  margin: 10px;
+  margin: 10px 0;
   text-align: left;
   font-size: .8rem;
 }
 
-.u {
-  transform: scale(-1, 1);
-  -moz-transform: scale(-1, 1);
-  -webkit-transform: scale(-1, 1);
-  -o-transform: scale(-1, 1);
-  -ms-transform: scale(-1, 1);
+.shiny1 {
+  background: -webkit-linear-gradient(135deg, hotpink, aquamarine,  mediumpurple);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.shiny2 {
+  background: -webkit-linear-gradient(45deg, hotpink, aquamarine, limegreen, mediumpurple);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .filter {
@@ -122,11 +126,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  color: blue;
-  background-color:cyan;
+button:active {
+  background: -webkit-linear-gradient(135deg, hotpink, aquamarine,  mediumpurple);
 }
 
-button:active {
-  background-color: blue;
+.button:hover {
+  background: -webkit-linear-gradient(135deg, hotpink, aquamarine,  mediumpurple);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
