--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
 
+:root {
+  --pad: 10px;
+  --color1: white;
+  --color2: blue;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-  color: blue;
+  color: var(--color2);
   font-family: 'DM Mono', monospace;
+  background-image: url("hr-img.png");
+  background-repeat: repeat;
 }
 
 .header {
+  background-color: var(--color1);
+  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: var(--pad);
 }
 
 h1 {
@@ -39,9 +52,9 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  color: white;
+  color: var(--color1);
   background-image: linear-gradient(45deg, aquamarine, aqua, mediumpurple, darkviolet);
-  border: 5px solid blue;
+  border: 5px solid var(--color2);
   border-radius: 25px;
   width: 250px;
   height: fit-content;
@@ -61,10 +74,10 @@ h1 {
 }
 
 .card-text {
-  background: rgb(0, 0, 255);
+  background: var(--color2);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
-  padding: 10px;
+  padding: var(--pad);
 }
 
 .card h2 {
@@ -76,14 +89,14 @@ h1 {
 }
 
 .card h3 {
-  margin: 10px 0;
+  margin: var(--pad) 0;
   text-align: justify;
   text-transform: uppercase;
   font-size: .9rem;
 }
 
 .card h6 {
-  margin: 5px 0;
+  margin: calc(var(--pad) / 2) 0;
   text-align: justify;
   text-transform: uppercase;
   font-size: .7rem;
@@ -91,7 +104,7 @@ h1 {
 }
 
 .card p {
-  margin: 10px 0;
+  margin: var(--pad) 0;
   text-align: left;
   font-size: .8rem;
 }
@@ -111,22 +124,22 @@ h1 {
 }
 
 .filter {
-  margin: 10px;
+  margin: var(--pad);
   display: inline;
 }
 
 select {
-  margin: 5px;
+  margin: var(--pad);
 }
 
 button {
-  color: white;
+  color: var(--color1);
   font-weight: bold;
   text-transform: uppercase;
-  padding: 5px;
-  background: blue;
-  border: 2px solid blue;
-  border-radius: 10px;
+  padding: calc(var(--pad) / 2);
+  background: var(--color2);
+  border: 2px solid var(--color2);
+  border-radius: var(--pad);
   cursor: pointer;
 }
 
