--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   --color2: blue;
 }
 
+body {
+  color: var(--color2);
+  font-family: 'DM Mono', monospace;
+  background-image: url("hr-img.png");
+  background-repeat: repeat;
+}
+
 .App {
   display: flex;
   flex-direction: column;
@@ -13,13 +20,6 @@
   align-items: center;
   width: 100%;
   height: 100%;
-}
-
-body {
-  color: var(--color2);
-  font-family: 'DM Mono', monospace;
-  background-image: url("hr-img.png");
-  background-repeat: repeat;
 }
 
 .header {
@@ -30,7 +30,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: var(--pad);
+  padding: var(--pad) 10%;
+  border-image: linear-gradient(250deg, hotpink, cyan, aquamarine, mediumpurple) 1;
+  border-style: solid;
+  border-width: 0 0 var(--pad) 0;
 }
 
 h1 {
@@ -46,6 +49,7 @@ h1 {
   justify-content: space-evenly;
   text-align: center;
   width: 100%;
+  padding: var(--pad) 10%;
 }
 
 .card {
